--- a/src/planetprogrammig/EditorPlanetProgramming.form
+++ b/src/planetprogrammig/EditorPlanetProgramming.form
@@ -893,6 +893,23 @@
             </MenuItem>
           </SubComponents>
         </Menu>
+        <Menu class="javax.swing.JMenu" name="jMenu3">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Notas"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem13">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Agregar nota"/>
+              </Properties>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem14">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Ver lista de notas"/>
+              </Properties>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
       </SubComponents>
     </Menu>
   </NonVisualComponents>
@@ -928,8 +945,8 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="pestaniasEntradaSalidas" max="32767" attributes="0"/>
-          <Component id="toolBarAccesosDirectos" alignment="0" pref="1331" max="32767" attributes="0"/>
+          <Component id="toolBarAccesosDirectos" pref="1403" max="32767" attributes="0"/>
+          <Component id="pestaniasEntradaSalidas" alignment="1" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -1321,13 +1338,6 @@
     </Container>
     <Container class="javax.swing.JTabbedPane" name="pestaniasEntradaSalidas">
       <Properties>
-        <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-          <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
-            <LineBorder roundedCorners="true">
-              <Color PropertyName="color" blue="cc" green="cc" red="cc" type="rgb"/>
-            </LineBorder>
-          </Border>
-        </Property>
         <Property name="tabLayoutPolicy" type="int" value="1"/>
         <Property name="componentPopupMenu" type="javax.swing.JPopupMenu" editor="org.netbeans.modules.form.ComponentChooserEditor">
           <ComponentRef name="popMenuCerrar"/>
